# todo-idom-py

./: README.md  pyproject.toml
tests/: test_todo_idom_py.py
todo_idom_py/: __main__.py  components.py  counter.py  datastructure.py  gallery.py  moving.py  playpause.py  todo.py
