[tool.poetry]
name = "todo-idom-py"
version = "0.1.0"
description = ""
authors = ["Adam Butler <adamjbutler091@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
idom = "^0.40.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
