[tool.poetry]
name = "todo-idom-py"
version = "1.0.0"
description = ""
authors = ["Adam Butler <adamjbutler091@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
idom = {extras = ["fastapi"], version = "^0.40.2"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
toml = "^0.10.2"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
